--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <!-- primo articolo -->
         <section class="distance">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<span class="evidenziato"> Officiis nam eligendi sequi assumenda consequuntur, pariatur nulla libero, voluptatum quasi</span>, repudiandae quis quod ducimus dolorem vero. Culpa illum dolor impedit? Magnam?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla rem placeat, quod quasi quos laborum rerum atque, ipsum totam modi sapiente quisquam quidem repudiandae delectus assumenda? Ea eveniet minus vero.</p>    
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Officiis nam eligendi sequi assumenda consequuntur, pariatur nulla libero, voluptatum quasi, repudiandae quis quod ducimus dolorem vero. Culpa illum dolor impedit? Magnam?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla rem placeat, quod quasi quos laborum rerum atque, ipsum totam modi sapiente quisquam quidem repudiandae delectus assumenda? <span class="evidenziato">Ea eveniet minus vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam a sit labore.</span> Nobis, repellendus a doloremque impedit, deleniti temporibus assumenda, earum facere molestiae nostrum atque doloribus cum. Voluptatem, laudantium magni?</p>    
         </section>
 <!-- /primo articolo -->
 
@@ -93,15 +93,32 @@
 
 <!-- ultimo articolo a paragrafo -->
         <section class="distance">
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<span class="evidenziato"> Officiis nam eligendi sequi assumenda consequuntur, pariatur nulla libero, voluptatum quasi</span>, repudiandae quis quod ducimus dolorem vero. Culpa illum dolor impedit? Magnam?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla rem placeat, quod quasi quos laborum rerum atque, ipsum totam modi sapiente quisquam quidem repudiandae delectus assumenda? Ea eveniet minus vero.</p>    
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<span class="evidenziato"> Officiis nam eligendi sequi assumenda consequuntur, pariatur nulla libero, voluptatum quasi</span>, repudiandae quis quod ducimus dolorem vero. Culpa illum dolor impedit? Magnam?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla rem placeat, quod quasi quos laborum rerum atque, ipsum totam modi sapiente quisquam quidem repudiandae delectus assumenda? Ea eveniet minus vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates sed maxime at magnam, laborum, dolore sit cupiditate illo doloribus possimus voluptas tempore odit ipsum est, incidunt nam! Voluptates, ipsa ducimus.</p>    
         </section>
 <!-- /ultimo articolo a paragrafo -->
     </main>
 
-    <footer>
+    <!-- potrebbero interessarti -->
+    <footer class="margine">
+        <section class="distance">
+        <h3>Potrebbero interessarti</h3>
+        <div class="foto-monitor">
+            <h4 class="scritta-su-foto">Lorem ipsum dolor</h4>
+        </div>
+        </section> 
+        <section>
+            <div class="foto-mappa">
+                <h4 class="scritta-su-foto">Lorem ipsum dolor</h4>
+            </div>
+            </section>  
+                 
+            
+
+
 
 
     </footer>
+<!-- /potrebbero interessarti -->    
     </div>
 </body>
 </html>
