fix: correzione visiva

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </main>
 
     <!-- potrebbero interessarti -->
-    <footer class="margine">
+    <footer>
         <section class="distance">
         <h3>Potrebbero interessarti</h3>
         <div class="foto-monitor">
